--- a/QrCodeAnyPlugin.csproj
+++ b/QrCodeAnyPlugin.csproj
@@ -129,6 +129,10 @@
     <None Include="icon.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="locale\zh_CN\LC_MESSAGES\QrCodeAny.mo" />
+    <None Include="locale\zh_CN\LC_MESSAGES\QrCodeAny.po" />
+    <None Include="locale\zh_TW\LC_MESSAGES\QrCodeAny.mo" />
+    <None Include="locale\zh_TW\LC_MESSAGES\QrCodeAny.po" />
     <None Include="QrCodeAny.po" />
     <None Include="README.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
